// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Fact and figures renders correctly in 1 column 1`] = `
<jest>
  <div
    class="bcl-fact-figures"
  >
    <h4
      class="fw-bold"
    >
      Fact and figures block
    </h4>
    <div
      class="bg-light p-3-5 pt-0"
    >
      <div
        class="row-cols-md-1 row row-cols-1 g-4 mt-3"
      >
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#x-diamond-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            1529 JIRA Ticket
          </h3>
          <h5
            class="fw-bold"
          >
            Jira Tickets
          </h5>
          <p>
            Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#ui-checks"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            337 Features
          </h3>
          <h5
            class="fw-bold"
          >
            Feature tickets
          </h5>
          <p>
            Turpis varius congue venenatis, erat dui feugiat felis.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#wallet-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            107 Tests
          </h3>
          <h5
            class="fw-bold"
          >
            Test tickets
          </h5>
          <p>
            Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#file-code-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            5670 Variants
          </h3>
          <h5
            class="fw-bold"
          >
            Test variants
          </h5>
          <p>
            Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#puzzle-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            345 Dev Ticket
          </h3>
          <h5
            class="fw-bold"
          >
            Jira ticket
          </h5>
          <p>
            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis nec lectus tortor.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#eye-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            43 Components
          </h3>
          <h5
            class="fw-bold"
          >
            Figma components
          </h5>
          <p>
            Sed efficitur bibendum rutrum. Nunc feugiat congue augue ac consectetur.
          </p>
        </div>
      </div>
      <div
        class="border-top d-block pt-3 mt-3"
      >
        <a
          href="/example"
        >
          Read more
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Fact and figures renders correctly in 2 columns 1`] = `
<jest>
  <div
    class="bcl-fact-figures"
  >
    <h4
      class="fw-bold"
    >
      Fact and figures block
    </h4>
    <div
      class="bg-light p-3-5 pt-0"
    >
      <div
        class="row-cols-md-2 row row-cols-1 g-4 mt-3"
      >
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#x-diamond-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            1529 JIRA Ticket
          </h3>
          <h5
            class="fw-bold"
          >
            Jira Tickets
          </h5>
          <p>
            Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#ui-checks"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            337 Features
          </h3>
          <h5
            class="fw-bold"
          >
            Feature tickets
          </h5>
          <p>
            Turpis varius congue venenatis, erat dui feugiat felis.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#wallet-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            107 Tests
          </h3>
          <h5
            class="fw-bold"
          >
            Test tickets
          </h5>
          <p>
            Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#file-code-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            5670 Variants
          </h3>
          <h5
            class="fw-bold"
          >
            Test variants
          </h5>
          <p>
            Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#puzzle-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            345 Dev Ticket
          </h3>
          <h5
            class="fw-bold"
          >
            Jira ticket
          </h5>
          <p>
            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis nec lectus tortor.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#eye-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            43 Components
          </h3>
          <h5
            class="fw-bold"
          >
            Figma components
          </h5>
          <p>
            Sed efficitur bibendum rutrum. Nunc feugiat congue augue ac consectetur.
          </p>
        </div>
      </div>
      <div
        class="border-top d-block pt-3 mt-3"
      >
        <a
          href="/example"
        >
          Read more
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Fact and figures renders correctly in 3 columns 1`] = `
<jest>
  <div
    class="bcl-fact-figures"
  >
    <h4
      class="fw-bold"
    >
      Fact and figures block
    </h4>
    <div
      class="bg-light p-3-5 pt-0"
    >
      <div
        class="row-cols-md-3 row row-cols-1 row-cols-sm-2 g-4 mt-3"
      >
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#x-diamond-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            1529 JIRA Ticket
          </h3>
          <h5
            class="fw-bold"
          >
            Jira Tickets
          </h5>
          <p>
            Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#ui-checks"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            337 Features
          </h3>
          <h5
            class="fw-bold"
          >
            Feature tickets
          </h5>
          <p>
            Turpis varius congue venenatis, erat dui feugiat felis.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#wallet-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            107 Tests
          </h3>
          <h5
            class="fw-bold"
          >
            Test tickets
          </h5>
          <p>
            Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#file-code-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            5670 Variants
          </h3>
          <h5
            class="fw-bold"
          >
            Test variants
          </h5>
          <p>
            Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#puzzle-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            345 Dev Ticket
          </h3>
          <h5
            class="fw-bold"
          >
            Jira ticket
          </h5>
          <p>
            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis nec lectus tortor.
          </p>
        </div>
        <div
          class="col h-100"
        >
          <svg
            class="bi icon--l"
          >
            <use
              xlink:href="/icons.svg#eye-fill"
            />
          </svg>
          <h3
            class="text-capitalize fw-bold mt-2"
          >
            43 Components
          </h3>
          <h5
            class="fw-bold"
          >
            Figma components
          </h5>
          <p>
            Sed efficitur bibendum rutrum. Nunc feugiat congue augue ac consectetur.
          </p>
        </div>
      </div>
      <div
        class="border-top d-block pt-3 mt-3"
      >
        <a
          href="/example"
        >
          Read more
        </a>
      </div>
    </div>
  </div>
</jest>
`;
